# BackEnd_projects

./: .gitignore  Pipfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
CPF/: cpf.py  main.py
CPF_CNPJ/: cpf_cnpj.py  main.py
Documents/: Cnh.py  Cnpj.py  Cpf.py  documents.py  main.py  pis.py
src/: config.py  database.ini  database.py  routes.py
webserver/: mydatabase
webserver/user/: models.py  views.py
webserver/user/migrations/: 0001_initial.py
webserver/webserver/: settings.py  urls.py
